Uso de la fakeapi de platzi con top level await

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   ],
   "author": "Kelly Condori",
   "license": "MIT",
-  "type":"module"
+  "type": "module",
+  "dependencies": {
+    "node-fetch": "^3.3.2"
+  }
 }
